Fix 'Start Free Trial' button text alignment to single line in FAQ section for consistency.

--- a/assets/css/Faq.css
+++ b/assets/css/Faq.css
@@ -42,6 +42,10 @@
   background-color: hsl(357, 85%, 81%);
 }
 
+#freeTrial{
+  width: 240px;
+}
+
 .FAQ-title {
   display: flex;
   justify-content: space-between;
